Changed links to https.

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
          url('../fonts/happy_sans-webfont.svg#webfont') format('svg');
 }
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 * {
   margin: 0; padding: 0;
@@ -49,7 +49,7 @@ html, body {
 }
 
 body {
-  background: #000 url(http://i.imgur.com/XgUk6.jpg) top center no-repeat fixed;
+  background: #000 url(https://i.imgur.com/XgUk6.jpg) top center no-repeat fixed;
   font-family: 'Open Sans', Verdana;
 }
 
