--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ html, body {
 }
 
 body {
-  background: #000 url(https://i.imgur.com/XgUk6.jpg) top center no-repeat fixed;
+  background: black;
   font-family: 'Open Sans', Verdana;
 }
 
